--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,3 +18,18 @@ spec:
         image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401048/food-ordering:v1
         ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: food-ordering-service
+  namespace: "2401048"
+spec:
+  type: NodePort
+  selector:
+    app: food-ordering
+  ports:
+    - protocol: TCP
+      port: 80          # Internal cluster port
+      targetPort: 80    # Pod container port
+      nodePort: 31086   # Host accessible port (FREE PORT)
